--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,17 +9,19 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db_lg?serverTimezone=GMT%2B8&useSSL=true&characterEncoding=utf-8
+    url: jdbc:mysql://home.007666.xyz:3306/db-lg?serverTimezone=GMT%2B8&useSSL=true&characterEncoding=utf-8
     username: root
-    password: 1234
+    password: zengyuan
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   data:
     redis:
-      host: localhost
-      port: 6379
-#      邮件
+      host: redis-17840.c54.ap-northeast-1-2.ec2.cloud.redislabs.com
+      port: 17840
+      username: default
+      password: oAKf5PdxmjSgU6mhLigYAt6ZdIg7KJmC
+  #      邮件
   mail:
     username: 2172941774@qq.com #账号
     password: tsgdqurawjkjeaaj    #在账号所在的服务商开启smtp服务并要取smtp密码
