--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://home.007666.xyz:3306/db-lg?serverTimezone=GMT%2B8&useSSL=true&characterEncoding=utf-8
+    url: jdbc:mysql://home.007666.xyz:3306/db_lg?serverTimezone=GMT%2B8&useSSL=true&characterEncoding=utf-8
     username: root
     password: zengyuan
   jackson:
